# soulflame-webgpu

./: .gitignore  10.main.js  113.main.js  121.main.js  128.main.js  136.main.js  169.main.js  209.main.js  228.main.js  229.main.js  233.main.js  24.main.js  241.main.js  287.main.js  290.main.js  315.main.js  329.main.js  346.main.js  352.main.js  364.main.js  365.main.js  37.main.js  376.main.js  380.main.js  381.app.js  391.main.js  410.main.js  416.main.js  420.main.js  431.main.js  475.main.js  484.main.js  498.main.js  506.main.js  509.main.js  510.main.js  531.main.js  554.main.js  559.main.js  560.main.js  (+60 more)
Tavern/: BarTop.vxm  Bench.vxm  BigDoor.vxm  (+12 more)
bevy/: .gitattributes  Cargo.toml  trace-1747349799815118.json  trace-1749198422279710.json
bevy/assets/: Dragon.vxm  autosave-street-scene.vxm  big_cube.vxm  street-scene.vxm
bevy/assets/meshes/: BearHead.vxm  BearRace.blend  BearRace.glb  BearRace_broken.glb  ChestAnimations.glb  OrcHead.vxm  autosave-BearHead.vxm
bevy/assets/meshes/Armour/Details/Misc/: Pouch.vxm
bevy/assets/meshes/Chest/: ChestBottom.vxm  ChestTop.vxm
bevy/assets/shaders/: custom_material.wgsl  custom_phase_item.wgsl  instancing.wgsl
bevy/crates/bevy_voxel_render/: Cargo.toml  README.md
bevy/src/: blend.rs  camera.rs  color_conversion.rs  custom_phase_item.rs  custom_shader_instancing.rs  dnd.rs  draw_aabb_gizmos.rs  instancing.rs  keyboard_events.rs  main.rs  replace_body_part_meshes.rs  set_animation_clip_keyboard.rs  spawn_player.rs  vxm.rs  vxm_mesh.rs  vxm_terrain.rs
bevy/src/render/: main.rs  mod.rs  shadow.rs  util.rs
bevy/src/render/passes/: main.rs  mod.rs  shadow.rs  tonemap_resolve.rs
bevy/src/render/shaders/: fullscreen-quad.wgsl  quarter-screen-quad.wgsl  shader.wgsl  tonemap-resolve-fullscreen-quad.wgsl  tonemap.compute.wgsl  tonemap_resolve.compute.wgsl  wireframe.wgsl
(+1950 files in other folders)
