[package]
name = "soulflame"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0", features = ["bevy_dev_tools"] }
thiserror = "1.0.69"
bevy-inspector-egui = "0.28.1"
bytemuck = "1.21.0"
rayon = "1.10.0"
iyes_perf_ui = "0.4.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
